--- a/about.html
+++ b/about.html
@@ -12,9 +12,9 @@
         <div class = "about-page">
             <div class = "site-header">
                 <h3 class = "site-title">Emily Elisa</h3>
-                <p class = "graphic-design-1">Graphic Design</p>
-                <p class = "art-1">Art</p>
-                <p class = "about-1">About</p>
+                <a href = "index.html" class = "graphic-design-1">Graphic Design</a>
+                <h4 class = "art-1">Art</>
+                <h4 class = "about-1">About</h4>
             </div>
             <div class = "about-middle">
                 <div class = "about-section">
@@ -25,12 +25,12 @@
                             <p class = "about-meat">I enjoy experimenting with color theory and typography to create simple yet fun and effective designs.</p>
                             <p class = "about-meat">I am looking for Summer 2023 internships in graphic design, interactive media, and user interface.</p>
                             <a href = "resume.pdf" download = "Emily Sawyer Resume">
-                                <button type = "button" class = "resume">Download Resume</button>
+                                <button type = "button" class = "button resume">Download Resume</button>
                             </a>
                         </div>
                     </div>
                     <div class = "photo-section">
-                        <img class = "me" src="EmilyMaroon.png">
+                        <img class = "me" src="EmilyMaroon2.png">
                     </div>
                 </div>
 
@@ -56,11 +56,11 @@
                             <br>
                             <label for = "email">Email</label>
                             <br>
-                            <input type = "textarea" class = "message" id = "text" name = "text">
+                            <textarea id="message" name="message" class = "message"></textarea>
                             <br>
                             <label for = "message">Message</label>
                             <br>
-                            <input type = "submit" value = "Send">
+                            <input type = "submit" value = "Send" class = "button send">
                         </form>
                     </div>
                 </div>
@@ -71,9 +71,9 @@
                     <img class = "linkedin" src="linkedin.png">
                 </div>
                 <div class = "nav">
-                    <h3 class = "gd-footer-1">Graphic Design</h3>
-                    <h3 class = "art-footer-1">Art</h3>
-                    <h3 class = "about-footer-1">About</h3>
+                    <a href = "index.html" class = "gd-footer-1">Graphic Design</a>
+                    <h4 class = "art-footer-1">Art</h4>
+                    <h4 class = "about-footer-1">About</h4>
                 </div>
             </div>
         </div>
