--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <h2 class = "site-title">Emily Elisa</h3>
             <h4 class = "graphic-design">Graphic Design</h4>
             <h4 class = "art">Art</h4>
-            <h4 class = "about">About</h4>
+            <a href = "about.html" class = "about">About</a>
         </div>
 
         <div class = "gd-projects">
@@ -39,9 +39,9 @@
                 <img class = "linkedin" src="linkedin.png" onclick = "linkedinClickFunction()">
             </div>
             <div class = "nav">
-                <h3 class = "gd-footer">Graphic Design</h3>
-                <h3 class = "art-footer">Art</h3>
-                <h3 class = "about-footer">About</h3>
+                <h4 class = "gd-footer">Graphic Design</h4>
+                <h4 class = "art-footer">Art</h4>
+                <a href = "about.html" class = "about-footer">About</a>
             </div>
         </div>
     </div>
