--- a/about.html
+++ b/about.html
@@ -11,7 +11,7 @@
     <body>
         <div class = "about-page">
             <div class = "site-header">
-                <h3 class = "site-title">Emily Elisa</h3>
+                <a href = "index.html" class = "site-title">Emily Elisa</a>
                 <a href = "index.html" class = "graphic-design-1">Graphic Design</a>
                 <h4 class = "art-1">Art</>
                 <h4 class = "about-1">About</h4>
