--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <div class = "project-page">
         <div class = "site-header">
-            <h2 class = "site-title">Emily Elisa</h3>
+            <a href = "index.html" class = "site-title">Emily Elisa</a>
             <h4 class = "graphic-design">Graphic Design</h4>
             <h4 class = "art">Art</h4>
             <a href = "about.html" class = "about">About</a>
