--- a/about.html
+++ b/about.html
@@ -21,7 +21,7 @@
                     <div class = "meat-section">
                         <h1 class = "about-header">About Me</h1>
                         <div class = "all-meat">
-                            <p class = "about-meat">My name is Emily Sawyer and I'm a junior Visualization major at Texas A&M with an emphasis in Graphic Design.</p>
+                            <p class = "about-meat">Hi! I am a senior at Texas A&M University working on my B.S. in Visualization with an emphasis on Interactive Media. From growing up in Texas to studying abroad in Italy, I've learned how to be open and adaptable to change and new perspectives.</p>
                             <p class = "about-meat">I enjoy experimenting with color theory and typography to create simple yet fun and effective designs.</p>
                             <p class = "about-meat">I am looking for Summer 2023 internships in graphic design, interactive media, and user interface.</p>
                             <a href = "resume.pdf" download = "Emily Sawyer Resume">
