--- a/about.html
+++ b/about.html
@@ -23,7 +23,7 @@
                         <div class = "all-meat">
                             <p class = "about-meat">Hi! My name is Emily Sawyer and I am a senior at Texas A&M University working on my B.S. in Visualization with an emphasis on Interactive Media. From growing up in Texas to studying abroad in Italy, I've learned how to be open and adaptable to change and new perspectives.</p>
                             <p class = "about-meat">As a designer, I strive to create fun and engaging human experiences that encourage the user to dive deeper. I value human-centered design and am passionate about delivering an intuitive interface that assists user needs.</p>
-                            <a href = "resume.pdf" download = "Emily Sawyer Resume">
+                            <a href = "Resume_EmilySawyer2023.pdf" download = "Emily Sawyer Resume">
                                 <button type = "button" class = "button resume">Download Resume</button>
                             </a>
                         </div>
