--- a/about.html
+++ b/about.html
@@ -21,8 +21,13 @@
                     <div class = "meat-section">
                         <h1 class = "about-header">About Me</h1>
                         <div class = "all-meat">
-                            <p class = "about-meat">Hi! My name is Emily Sawyer and I am a senior at Texas A&M University working on my B.S. in Visualization with an emphasis on Interactive Media. From growing up in Texas to studying abroad in Italy, I've learned how to be open and adaptable to change and new perspectives.</p>
-                            <p class = "about-meat">As a designer, I strive to create fun and engaging human experiences that encourage the user to dive deeper. I value human-centered design and am passionate about delivering an intuitive interface that assists user needs.</p>
+                            <p class = "about-meat">Hi! My name is Emily Sawyer and I am a senior at Texas A&M University</p> 
+                            <p class = "about-meat">working on my B.S. in Visualization with an emphasis on Interactive Media. From growing up<p/>
+                            <p class = "about-meat">in Texas to studying abroad in Italy, I've learned how to be open and adaptable to change <p/>
+                            <p class = "about-meat">and new perspectives.</p>
+                            <p class = "about-meat">As a designer, I strive to create fun and engaging human experiences </p>
+                            <p class = "about-meat">that encourage the user to dive deeper. I value human-centered design and am passionate about </p>
+                            <p class = "about-meat">delivering an intuitive interface that assists user needs.</p>
                             <a href = "Resume_EmilySawyer2023.pdf" download = "Emily Sawyer Resume">
                                 <button type = "button" class = "button resume">Download Resume</button>
                             </a>
