--- a/index.html
+++ b/index.html
@@ -24,7 +24,8 @@
             </div>
 
             <div class = "gd-gallery">
-                <img class = "project" src = "project1.jpg" onmouseover = "this.src = 'project1hover.png'" onmouseleave = "this.src = 'project1.jpg'">
+                <a href = "about.html"><img class = "project" src = "project1.jpg" onmouseover = "this.src = 'project1hover.png'" onmouseleave = "this.src = 'project1.png'"></a>
+                <!-- <img class = "project" src = "project1.jpg" onmouseover = "this.src = 'project1hover.png'" onmouseleave = "this.src = 'project1.jpg'"> -->
                 <img class = "project" src = "project2.png" onmouseover = "this.src = 'project2hover.png'" onmouseleave = "this.src = 'project2.png'">
                 <img class = "project" src = "project3.jpg" onmouseover = "this.src = 'project3hover.png'" onmouseleave = "this.src = 'project3.jpg'">
                 <img class = "project" src = "project4.jpg" onmouseover = "this.src = 'project4hover.png'" onmouseleave = "this.src = 'project4.jpg'">
