--- a/about.html
+++ b/about.html
@@ -21,14 +21,10 @@
                     <div class = "meat-section">
                         <h1 class = "about-header">About Me</h1>
                         <div class = "all-meat">
-                            <p class = "about-meat">Hi! My name is Emily Sawyer and I am a senior at Texas A&M University</p> 
-                            <p class = "about-meat">working on my B.S. in Visualization with an emphasis on Interactive Media. From growing up<p/>
-                            <p class = "about-meat">in Texas to studying abroad in Italy, I've learned how to be open and adaptable to change <p/>
-                            <p class = "about-meat">and new perspectives.</p>
-                            <p class = "about-meat">As a designer, I strive to create fun and engaging human experiences </p>
-                            <p class = "about-meat">that encourage the user to dive deeper. I value human-centered design and am passionate about </p>
-                            <p class = "about-meat">delivering an intuitive interface that assists user needs.</p>
-                            <a href = "Resume_EmilySawyer2023.pdf" download = "Emily Sawyer Resume">
+                            <p class = "about-meat">My name is Emily Sawyer and I'm a junior Visualization major at Texas A&M with an emphasis in Graphic Design.</p>
+                            <p class = "about-meat">I enjoy experimenting with color theory and typography to create simple yet fun and effective designs.</p>
+                            <p class = "about-meat">I am looking for Summer 2023 internships in graphic design, interactive media, and user interface.</p>
+                            <a href = "resume.pdf" download = "Emily Sawyer Resume">
                                 <button type = "button" class = "button resume">Download Resume</button>
                             </a>
                         </div>
